Fix contraste of datetime in archive list

--- a/src/assets/styles/partials/_postlist.scss
+++ b/src/assets/styles/partials/_postlist.scss
@@ -33,6 +33,6 @@
     @extend %altText;
     display: block;
     font-size: $size-step--2;
-    color: var(--color-gray);
+    color: var(--color-gray-dark);
   }
 }
